--- a/style.css
+++ b/style.css
@@ -120,15 +120,15 @@ select:hover{
     left: 2rem;
     display: flex;
     flex-direction: column;
-    background: url(https://guildwars2.staticwars.com/wp-content/themes/guildwars2.com-live/img/featured-ft.c2e7567e.jpg) no-repeat 50% 100%;
 }
 .showcase h2{
     position: absolute;
     top: 130px;
     left: 150px;
     margin-bottom: 10px;
-    font-size: 55px;
+    font-size: 50px;
     line-height: 1.1;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 .showcase p{
     position: absolute;
@@ -138,17 +138,34 @@ select:hover{
     left: 150px;
     margin-bottom: 32px;
     color: #777;
-    font-size: 20px;
-    line-height: 1.1
+    font-size: 17px;
+    line-height: 1.1;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 .showcase .p2{
+    position: absolute;
     top: 280px;
-    left: 150px;
+    left: 160px;
     font-size: 14px;
     margin-bottom: 32px;
     color: #ff0000;
     line-height: 1.1;
+    z-index: 50;
+    text-transform: uppercase;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 .showcase .leia-mais .p2 i{
     margin-left: 5px;
+}
+
+.showcase .leia-mais img{
+    position: absolute;
+    top: 240px;
+    left: 90px;
+    z-index: 10;
+}
+.img-showcase-rodape img{
+   width: 95%;
+   position: absolute;
+   bottom: -80px;
 }
