--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
     /*overflow-x: hidden;*/
 }
 
+button{
+    outline:none;
+}
+
 li{
   list-style: none;
 }
 a{
     text-decoration: none;
+    color: #8c8c8c;
 }
 @font-face {
     font-family: Cronos;
@@ -45,26 +50,91 @@ a{
 }
 .top-menu .top-list2{
     display: flex;
-    margin-left: 30rem;
+    margin-left: 29rem;
     justify-content: space-between;
-    font-size: 14px;
+    font-size: 13px;
+    padding: 0;
 }
 .top-menu .top-list2 li{
-    margin: 0 5px;
+    margin: 0 7px;
 }
-.top-menu li:hover{
-    color: #ff0000;
+.top-menu .top-list2 .space{
+    cursor: default;
+}
+
+.top-menu #li-link:hover{
+    color: #d6230c;
     cursor: pointer;
 }
-select{
+.lang-button{
+    position: absolute;
+    top: 10px;
+    right: 30px;
     background-color: rgba(0, 0, 0);
-    color: #8c8c8c;
     border: none;
-}
-select:hover{
-    color: #ff0000;
+    width: 60px;
+    height: 30px;
     cursor: pointer;
+    z-index: -10;
 }
+.lang-button:hover .lang-list{
+    opacity: 1;
+    visibility: visible; 
+    animation: actionMove 10s; 
+    top: 20px;
+}
+.lang-button:hover .seta-baixo:before{
+    top:11px;
+}
+.lang-button .lang-select{
+    position: absolute;
+    top: 1px;
+    margin: 0px;
+    color: #878787;
+    font-family: 'Oswald', sans-serif;
+}
+.lang-list{
+    position: absolute;
+    background-color: #000000;
+    width: 30px;
+    height: 130px;
+    display: flex;
+    z-index: 102;
+    top: 0px;
+    right: 15px;
+    color: #8c8c8c;
+    font-family: 'Oswald', sans-serif;
+    padding: 10px;
+    transition: top .2s;
+    visibility: hidden;
+    opacity: 0;
+}
+.lang-list .language{
+    position: absolute;
+    right: 1px;
+    width: 100%;
+    height: 100%;
+}
+.lang-list .language li{  
+   margin-bottom: 5px;
+   margin-top: 13px;
+}
+.seta-baixo:before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    width: 0; 
+    height: 0; 
+    top:8px;
+    right: -3px;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 6px solid #8c8c8c;
+    z-index: 103;
+    transition: all .3s;
+  }
 /*----------Navbar----------------*/
 .inicio{
     height: 100vh;
@@ -166,12 +236,28 @@ select:hover{
     left: 160px;
     font-size: 16px;
     margin-bottom: 32px;
-    color: #ff0000;
+    color: #d6230c;
     line-height: 1.1;
     z-index: 50;
     text-transform: uppercase;
     font-family: Cronos;
 }
+.seta-direita:before {
+    position: absolute;
+    z-index: 100;
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    width: 0; 
+    height: 0; 
+    top: 282px;
+    left: 260px;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid #d6230c;
+}
+
 .showcase .leia-mais .p2 i{
     margin-left: 5px;
 }
@@ -187,6 +273,69 @@ select:hover{
    position: absolute;
    bottom: -80px;
 }
+/*-------------------showcase buttons-------------------------*/
+.button-show{
+    position: relative;
+    float: right;
+    background-color: rgba(0, 0, 0, 0);
+}
+.button-show button{
+    position: absolute;
+    z-index: 200;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+    bottom: -15px;
+}
+.button-show p{
+    position: absolute;
+    margin-top: 3px;
+    margin-left: 7px;
+    font-size: 20px;
+    z-index: 2;
+}
+.button-1{
+    right: 430px;
+    bottom: 0;
+}
+.button-1 .on{
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    /*visibility: hidden;*/
+}
+.button-2{
+    right: 380px;
+    bottom: 0;
+}
+.button-2 .on{
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    visibility: hidden;
+}
+.button-3{
+    right: 330px;
+    bottom: 0;
+}
+.button-3 .on{
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    visibility: hidden;
+}
+.button-4{
+    right: 280px;
+    bottom: 0;
+}
+.button-4 .on{
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    visibility: hidden;
+}
+
 
 /*---------News----------*/
 .news{
@@ -273,7 +422,7 @@ select:hover{
     margin-bottom: 5px;
     font-size: 14px;
     font-style: bold;
-    color: #ff0000;
+    color: #d6230c;
     font-family: Cronos;
 }
 .news-list .list-items .item img, .item2 img, .item3 img, .item4 img, .item5 img, .item6 img, .item7 img, .item8 img{
@@ -282,7 +431,7 @@ select:hover{
     height: 15px;
 }
 .all-news a{
-    color: #ff0000;
+    color:#d6230c;
 }
 .card-list{
     position: relative;
@@ -330,8 +479,34 @@ select:hover{
 }
 .card a{
     margin-left: 10px;
-    color: #ff0000;
+    color:#d6230c;
     font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
     font-size: 12px;
 }
+.card .card-border2 .seta2-direita:before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 77px;
+    top: 465px;
+    width: 0; 
+    height: 0; 
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid #d6230c;
+  }
+  .card .card-border2 .seta3-direita:before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 97px;
+    top: 726px;
+    width: 0; 
+    height: 0; 
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid #d6230c;
+  }
