--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a{
 .lang-button:hover .lang-list{
     opacity: 1;
     visibility: visible; 
-    top: 20px;
+    top: -5px;
 }
 .lang-button:hover .seta-baixo:before{
     top:11px;
@@ -95,11 +95,11 @@ a{
 .lang-list{
     position: absolute;
     background-color: #000000;
-    width: 30px;
-    height: 130px;
+    width: 28px;
+    height: 150px;
     display: flex;
     z-index: 102;
-    top: 0px;
+    top: -20px;
     right: 15px;
     color: #8c8c8c;
     font-family: 'Oswald', sans-serif;
@@ -115,8 +115,8 @@ a{
     height: 100%;
 }
 .lang-list .language li{  
-   margin-bottom: 5px;
-   margin-top: 13px;
+   margin-bottom: 13px;
+   margin-top: 0;
 }
 .seta-baixo:before {
     position: absolute;
@@ -170,6 +170,9 @@ a{
 .navbar li{
     font-family: Cronos;
 }
+.navbar a{
+    color: #ffffff;
+}
 .navbar li:hover{
     color: #daa520;
     cursor: pointer;  
@@ -216,57 +219,21 @@ a{
 
 .sub-lists1{
     right: 600px;
-    visibility: hidden;
-    opacity: 0;
-}
-.game:hover .sub-lists1{
-    opacity: 1;
-    visibility: visible; 
 }
 .sub-lists2{
     right: 507px;
-    visibility: hidden;
-    opacity: 0;
-}
-.releases:hover .sub-lists2{
-    opacity: 1;
-    visibility: visible; 
 }
 .sub-lists3{
-    right: 423px;
-    visibility: hidden;
-    opacity: 0;
-}
-.media:hover .sub-lists3{
-    opacity: 1;
-    visibility: visible; 
+    right: 420px;
 }
 .sub-lists4{
     right: 345px;
-    visibility: hidden;
-    opacity: 0;
-}
-.community:hover .sub-lists4{
-    opacity: 1;
-    visibility: visible; 
 }
 .sub-lists5{
     right: 221px;
-    visibility: hidden;
-    opacity: 0;
-}
-.services:hover .sub-lists5{
-    opacity: 1;
-    visibility: visible; 
 }
 .sub-lists6{
-    right: 137px;
-    visibility: hidden;
-    opacity: 0; 
-}
-.shop:hover .sub-lists6{
-    opacity: 1;
-    visibility: visible; 
+    right: 135px; 
 }
 .sub-lists1 .img-1{
     width: 269px;
@@ -575,32 +542,36 @@ a{
 }
 .button-show button{
     position: absolute;
+    width: 25px;
+    height: 25px;
     z-index: 200;
     bottom: 0px;
     background-color: rgba(0, 0, 0, 0);
     border: none;
     cursor: pointer;
-    bottom: -15px;
+    bottom: -22px;
+    color: #b1b1b1;
+    font: 700 20px/1.25 Cronos,Arial,Helvetica,sans-serif;
 }
 .button-show p{
     position: absolute;
-    margin-top: 3px;
-    margin-left: 7px;
+    margin-top: .5px;
+    margin-left: 7.5px;
     font-size: 20px;
     z-index: 2;
 }
 .button-1{
-    right: 430px;
+    right: 340px;
     bottom: 0;
 }
 .button-1 .on{
     position: absolute;
-    bottom: 2px;
-    right: 1px;
+    bottom: -5px;
+    right: -11px;
     /*visibility: hidden;*/
 }
 .button-2{
-    right: 380px;
+    right: 310px;
     bottom: 0;
 }
 .button-2 .on{
@@ -610,7 +581,7 @@ a{
     visibility: hidden;
 }
 .button-3{
-    right: 330px;
+    right: 280px;
     bottom: 0;
 }
 .button-3 .on{
@@ -620,10 +591,20 @@ a{
     visibility: hidden;
 }
 .button-4{
-    right: 280px;
+    right: 250px;
     bottom: 0;
 }
 .button-4 .on{
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    visibility: hidden;
+}
+.button-5{
+    right: 220px;
+    bottom: 0;
+}
+.button-5 .on{
     position: absolute;
     bottom: 2px;
     right: 1px;
