retoques nas abas interativas

--- a/style.css
+++ b/style.css
@@ -220,20 +220,402 @@ a{
 .sub-lists1{
     right: 600px;
 }
+
 .sub-lists2{
     right: 507px;
 }
+
 .sub-lists3{
     right: 420px;
 }
+
 .sub-lists4{
     right: 345px;
 }
+
 .sub-lists5{
     right: 221px;
 }
+
 .sub-lists6{
     right: 135px; 
+}
+.button-sub1:hover{
+    background-color: rgba(150, 150, 2150, .1);
+}
+.button-sub1{
+    position: absolute;
+    top: 99px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub2:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub2{
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub3:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub3{
+    position: absolute;
+    top: 162px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub4:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub4{
+    position: absolute;
+    top: 194px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub5:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub5{
+    position: absolute;
+    top: 226px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub6:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub6{
+    position: absolute;
+    top: 258px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub7:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub7{
+    position: absolute;
+    top: 290px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub8:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub8{
+    position: absolute;
+    top: 95px;
+    left: 20px;
+    width: 85%;
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub9:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub9{
+    position: absolute;
+    top: 167px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub10:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub10{
+    position: absolute;
+    top: 197px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub11:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub11{
+    position: absolute;
+    top: 102px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub11-5:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub11-5{
+    position: absolute;
+    top: 134px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub12:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub12{
+    position: absolute;
+    top: 166px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub13:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub13{
+    position: absolute;
+    top: 198px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub14:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub14{
+    position: absolute;
+    top: 230px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub15:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub15{
+    position: absolute;
+    top: 260px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub16:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub16{
+    position: absolute;
+    top: 98px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub17:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub17{
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub17-5:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub17-5{
+    position: absolute;
+    top: 162px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub18:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub18{
+    position: absolute;
+    top: 194px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub19:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub19{
+    position: absolute;
+    top: 98px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0,0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub20:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub20{
+    position: absolute;
+    top: 128px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub21:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub21{
+    position: absolute;
+    top: 160px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub22:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub22{
+    position: absolute;
+    top: 192px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub23:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub23{
+    position: absolute;
+    top: 224px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub24:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub24{
+    position: absolute;
+    top: 98px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub25:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub25{
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub26:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub26{
+    position: absolute;
+    top: 162px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.button-sub27:hover{
+    background-color: rgba(150, 150, 150, .1);
+}
+.button-sub27{
+    position: absolute;
+    top: 194px;
+    left: 20px;
+    width: 85%;
+    height: 31px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
 }
 .sub-lists1 .img-1{
     width: 269px;
